--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,19 @@
 *.tar.gz
 *.rar
 
+# IntelliJ IDEA Files
+*.iml
+*.ipr
+*.iws
+*.idea
+
+# ignore eclipse files
+.project
+.classpath
+.settings
+.factorypath
+.metadata
+
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
